feat: initial ui structure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <mat-toolbar color="primary">
-  <button mat-button routerLink="/" i18n="@@home">Home</button>
-  <button mat-button routerLink="/" i18n="@@producation.chain">Production Chain</button>
-  <button mat-button routerLink="/" i18n="@@people">People</button>
+  <a mat-button routerLink="/tycoons" i18n="@@tycoons">Tycoons</a>
+  <a mat-button routerLink="/ecos" i18n="@@ecos">Ecos</a>
+  <a mat-button routerLink="/techs" i18n="@@techs">Techs</a>
+  <a mat-button routerLink="/global" i18n="@@global">Global</a>
 </mat-toolbar>
+<router-outlet></router-outlet>
