setup building list

--- a/src/app/production-building-list/production-building-list.component.html
+++ b/src/app/production-building-list/production-building-list.component.html
@@ -1,3 +1,5 @@
-<p>
-  production-building-list works!
-</p>
+<ul class="production-building-list">
+  <li *ngFor="let productionBuilding of productionBuildings">
+      <app-production-building [productionBuilding]="productionBuilding"></app-production-building>
+  </li>
+</ul>
