--- a/src/app/production-building/production-building.component.html
+++ b/src/app/production-building/production-building.component.html
@@ -1,3 +1,5 @@
-<p>
-  production-building works!
-</p>
+<mat-card>
+  <mat-card-header>
+    <span>{{productionBuilding.name}}</span>
+  </mat-card-header>
+</mat-card>
