--- a/src/app/population-container/population-container.component.html
+++ b/src/app/population-container/population-container.component.html
@@ -1,3 +1,1 @@
-<p>
-  population-container works!
-</p>
+<app-production-building-list [productionBuildings]="dataService.buildingData | async"></app-production-building-list>
