Setup list and changed theme

--- a/src/app/production-building-list/production-building-list.component.html
+++ b/src/app/production-building-list/production-building-list.component.html
@@ -1,5 +1,5 @@
-<ul class="production-building-list">
-  <li *ngFor="let productionBuilding of productionBuildings">
+<mat-list role="list">
+    <mat-list-item *ngFor="let productionBuilding of productionBuildings">
       <app-production-building [productionBuilding]="productionBuilding"></app-production-building>
-  </li>
-</ul>
+    </mat-list-item>
+</mat-list>
