Added image to list items, changed list items to expandables

--- a/src/app/production-building-list/production-building-list.component.html
+++ b/src/app/production-building-list/production-building-list.component.html
@@ -1,5 +1,14 @@
-<mat-list role="list">
-    <mat-list-item *ngFor="let productionBuilding of productionBuildings">
+<mat-accordion>
+  <mat-expansion-panel *ngFor="let productionBuilding of productionBuildings" (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+    <mat-expansion-panel-header>
       <app-production-building [productionBuilding]="productionBuilding"></app-production-building>
-    </mat-list-item>
-</mat-list>
+    </mat-expansion-panel-header>
+    <p>I'm visible because I am open</p>
+    <p>I'm visible because I am open</p>
+    <p>I'm visible because I am open</p>
+    <p>I'm visible because I am open</p>
+    <p>I'm visible because I am open</p>
+    <p>I'm visible because I am open</p>
+    <p>I'm visible because I am open</p>
+  </mat-expansion-panel>
+</mat-accordion>
