--- a/src/app/production-building/production-building.component.html
+++ b/src/app/production-building/production-building.component.html
@@ -1,1 +1,4 @@
-<span>{{productionBuilding.name}}</span>
+<mat-panel-title>
+  <img alt="{{productionBuilding.name}}.png" style="margin-right: 50px" />
+  <span>{{productionBuilding.name}}</span>
+</mat-panel-title>
