feat: production chain base

--- a/src/app/population-container/population-container.component.html
+++ b/src/app/population-container/population-container.component.html
@@ -1,1 +1,1 @@
-<app-production-building-list [productionBuildings]="dataService.buildingData | async"></app-production-building-list>
+<app-production-building-list [productionBuildings]="buildingDatas | async"></app-production-building-list>
