--- a/src/app/production-chain/production-chain.component.html
+++ b/src/app/production-chain/production-chain.component.html
@@ -2,7 +2,7 @@
   {{productionBuilding.name}} ({{count}})
   <div *ngFor="let rawMaterial of productionBuilding.rawMaterial">
     <ng-container *ngFor="let building of rawMaterial.productionBuildings">
-      <app-production-chain [productionBuilding]="building" [parentTime]="productionBuilding.productTime" [amount]="amount * count"></app-production-chain>
+      <app-production-chain [productionBuilding]="building" [parentTime]="productionBuilding.productTime" [amount]="(rawMaterial.amount || 1000) * count"></app-production-chain>
     </ng-container>
   </div>
 </div>
