--- a/src/app/production-building/production-building.component.html
+++ b/src/app/production-building/production-building.component.html
@@ -1,4 +1,5 @@
 <mat-panel-title>
-  <img alt="{{productionBuilding.name}}.png" style="margin-right: 50px" />
+  <!-- <img alt="{{productionBuilding.name}}.png" style="margin-right: 50px" /> -->
+  <a href="#"><div class="productionBuildingName"</div></a>
   <span>{{productionBuilding.name}}</span>
 </mat-panel-title>
