--- a/src/app/production-building/production-building.component.css
+++ b/src/app/production-building/production-building.component.css
@@ -8,7 +8,7 @@
 
 .productionBuildingName
 {
-  background: url(../../assets/icons/GUI01.png) 0px 0px;)
-  width: 50px
+  background: url(../../assets/icons/GUI01.png) 0px 0px;
+  width: 50px;
   height: 50px;
 }
