feat: calculate resourc by people input

--- a/src/app/population-container/population-container.component.html
+++ b/src/app/population-container/population-container.component.html
@@ -1,1 +1,2 @@
-<app-production-building-list [productionBuildings]="buildingDatas | async"></app-production-building-list>
+<app-population-input [race]="race | async" [levelCount]="levelCount | async"></app-population-input>
+<app-production-building-list [productionBuildings]="buildingDatas | async" [buildingCount]="buildingCount | async"></app-production-building-list>
