--- a/src/app/population-input/population-input.component.html
+++ b/src/app/population-input/population-input.component.html
@@ -1,3 +1,5 @@
-<p>
-  population-input works!
-</p>
+<div>
+  <mat-form-field *ngFor="let control of copyArray(form.controls); let index = index">
+    <input matInput [placeholder]="index + 1" [formControl]="control">
+  </mat-form-field>
+</div>
