--- a/src/app/production-building-list/production-building-list.component.html
+++ b/src/app/production-building-list/production-building-list.component.html
@@ -1,6 +1,7 @@
 <mat-accordion>
   <ng-container *ngFor="let productionBuilding of productionBuildings">
-    <mat-expansion-panel *ngIf="buildingCount.get(productionBuilding) > 0" (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+    <mat-expansion-panel [disabled]="!buildingCount.get(productionBuilding) > 0" (opened)="panelOpenState = true"
+      (closed)="panelOpenState = false">
       <mat-expansion-panel-header>
         <app-production-building [productionBuilding]="productionBuilding"></app-production-building>
       </mat-expansion-panel-header>
